--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="enter_the_text">Введите текст</string>
     <string name="clear_edit_text">Очистить поле</string>
     <string name="horizontal_line">Горизонтальная разделительная линия</string>
+    <string name="history">История</string>
 </resources>
