Теперь история работает как надо

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="clear_edit_text">Очистить поле</string>
     <string name="horizontal_line">Горизонтальная разделительная линия</string>
     <string name="history">История</string>
+    <string name="hyphen">-</string>
 </resources>
